# dropyacht_assigment

./: manage.py  pyproject.toml
dropyacht_app/: admin.py  apps.py  functions.py  models.py  serializers.py  views.py
dropyacht_app/migrations/: 0001_initial.py  0002_alter_show_unique_together.py  0003_alter_movie_name.py
dropyacht_proj/: asgi.py  settings.py  urls.py  wsgi.py
